--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "b1nd_design_system",
-  "packageManager": "yarn@3.3.0",
+  "packageManager": "yarn@3.2.4",
   "workspaces": {
     "packages": [
       "packages/*"
@@ -10,7 +10,7 @@
     "@changesets/cli": "^2.25.2",
     "eslint": "^8.29.0",
     "prettier": "^2.8.1",
-    "typescript": "^4.9.4"
+    "typescript": "4.8.4"
   },
   "scripts": {
     "build:all": "yarn workspaces foreach -p run build",
