--- a/packages/b1nd-styled-components-theme/tsconfig.json
+++ b/packages/b1nd-styled-components-theme/tsconfig.json
@@ -5,6 +5,6 @@
       "outDir": "dist",
       "emitDeclarationOnly": true
     },
-    "include": ["./src"]
+    "include": ["./src", "./@types"]
 }
   
