🐛 :: yarn lockfile 업데이트 문제 해결

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install Dependencies
         run: |
           npm i yarn
-          yarn install 
+          yarn install --immutable --immutable-cache
 
       - name: Creating .npmrc
         run: | 
