--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,9 +21,7 @@ jobs:
           node-version: '16.x'  
 
       - name: Install Dependencies
-        run: |
-          npm i yarn
-          yarn install --immutable --immutable-cache
+        run:  yarn install --immutable --immutable-cache
 
       - name: Creating .npmrc
         run: | 
