🐛 :: yarn lockfile 업데이트 문제 해결

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: '16.x'  
 
       - name: Install Dependencies
-        run:  yarn install --immutable --immutable-cache
+        run:  yarn install --frozen-lockfile
 
       - name: Creating .npmrc
         run: | 
