--- a/packages/b1nd-dodam-common-ui/package.json
+++ b/packages/b1nd-dodam-common-ui/package.json
@@ -21,14 +21,14 @@
   },
   "devDependencies": {
     "@babel/core": "7.16.0",
-    "@mdx-js/react": "1.6.22",
+    "@mdx-js/react": "^2.2.1",
     "@storybook/addon-docs": "6.3.9",
     "@storybook/addon-essentials": "6.3.9",
     "@storybook/addon-links": "6.3.9",
     "@storybook/react": "6.3.9",
     "@types/babel__core": "^7",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "@types/styled-components": "^5",
     "@yarnpkg/esbuild-plugin-pnp": "^3.0.0-rc.15",
     "@yarnpkg/pnpify": "^4.0.0-rc.33",
