🐛 :: changesets 설정 에러 해결

--- a/packages/b1nd-dodam-common-ui/package.json
+++ b/packages/b1nd-dodam-common-ui/package.json
@@ -12,6 +12,11 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
+  "publishConfig": {
+    "access": "public",
+    "main": "./dist/index.js",
+    "typings": "./dist/index.d.ts"
+  },
   "author": "ldh3907 <ldh165163@gmail.com>",
   "license": "ISC",
   "peerDependencies": {
