⚡️ :: esbuild 설정 파일 변경, 모듈 export 수정

--- a/packages/b1nd-react-util/package.json
+++ b/packages/b1nd-react-util/package.json
@@ -32,6 +32,7 @@
   },
   "peerDependencies": {
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "lodash": "4.17.21"
   }
 }
