--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,27 +11,27 @@ jobs:
   release:
     name: Publish
     runs-on: ubuntu-latest
-    steps: 
+    steps:
       - name: ✅ Checkout Repo
         uses: actions/checkout@v2
 
       - name: ⚙️ Setting Node 16.x
         uses: actions/setup-node@v2
         with:
-          node-version: '16.x'  
+          node-version: "16.x"
 
       - name: Install Dependencies
-        run:  yarn install --frozen-lockfile
+        run: yarn install
 
       - name: Creating .npmrc
-        run: | 
+        run: |
           cat << EOF > "./.npmrc"
            //registry.npmjs.org/:_authToken=$NPM_REGISTRY_TOKEN
           EOF
-        env: 
+        env:
           NPM_REGISTRY_TOKEN: ${{ secrets.NPM_REGISTRY_TOKEN }}
 
-      - name: Create Release or Publish to npm    
+      - name: Create Release or Publish to npm
         uses: changesets/action@v1
         with:
           publish: yarn release
