--- a/packages/b1nd-react-util/package.json
+++ b/packages/b1nd-react-util/package.json
@@ -22,17 +22,17 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@yarnpkg/esbuild-plugin-pnp": "^3.0.0-rc.15",
+    "@yarnpkg/pnpify": "^4.0.0-rc.34",
     "esbuild": "^0.16.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "@yarnpkg/pnpify": "^4.0.0-rc.34",
     "lodash": "^4.17.21"
   },
   "peerDependencies": {
+    "lodash": "^4",
     "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "lodash": "4.17.21"
+    "react-dom": "18.0.0"
   }
 }
