--- a/packages/b1nd-react-util/package.json
+++ b/packages/b1nd-react-util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@b1nd/b1nd-react-util",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "b1nd react util collection",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -25,7 +25,8 @@
     "@yarnpkg/pnpify": "^4.0.0-rc.34",
     "esbuild": "^0.16.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0"
   },
   "dependencies": {
     "lodash": "^4.17.21"
