--- a/packages/b1nd-react-util/tsconfig.json
+++ b/packages/b1nd-react-util/tsconfig.json
@@ -4,7 +4,8 @@
     "rootDir": "src",
     "outDir": "dist",
     "emitDeclarationOnly": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "declaration": true
   },
   "include": ["./src"]
 }
