--- a/packages/b1nd-styled-components-theme/tsconfig.json
+++ b/packages/b1nd-styled-components-theme/tsconfig.json
@@ -1,10 +1,10 @@
 {
-    "extends": "../../tsconfig.base.json",
-    "compilerOptions": {
-      "rootDir": "src",
-      "outDir": "dist",
-      "emitDeclarationOnly": true
-    },
-    "include": ["./src", "./@types"]
+  "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "rootDir": "src",
+    "outDir": "dist",
+    "emitDeclarationOnly": true,
+    "declaration": true
+  },
+  "include": ["./src", "./@types"]
 }
-  
