--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
             nodeModules-
 
       - name: Install Dependencies
-        run: yarn install --immutable
+        run: yarn install
 
       - name: Creating .npmrc
         run: |
