--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.25.2",
+    "@types/prettier": "^2",
     "eslint": "^8.29.0",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.3",
     "typescript": "4.8.4"
   },
   "scripts": {
