📑 :: 패키지 명 변경

--- a/packages/b1nd-toastify/package.json
+++ b/packages/b1nd-toastify/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@b1nd/b1nd-react-toastify",
+  "name": "@b1nd/b1nd-toastify",
   "version": "1.0.0",
   "description": "b1nd react toastify",
   "main": "./dist/index.js",
