--- a/packages/b1nd-toastify/package.json
+++ b/packages/b1nd-toastify/package.json
@@ -30,7 +30,7 @@
     "react-toastify"
   ],
   "peerDependencies": {
-    "react": "18.0.0",
+    "react": ">=18.0.0",
     "react-toastify": "9.0.8"
   }
 }
