--- a/packages/b1nd-styled-components-util/package.json
+++ b/packages/b1nd-styled-components-util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@b1nd/b1nd-styled-components-util",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "b1nd styled-components util",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -27,7 +27,7 @@
     "styled-components": "^5.3.6"
   },
   "peerDependencies": {
-    "react": "18.0.0",
-    "styled-components": "5.3.5"
+    "react": ">=18.0.0",
+    "styled-components": ">=5.3.5"
   }
 }
