--- a/packages/b1nd-toastify/package.json
+++ b/packages/b1nd-toastify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@b1nd/b1nd-toastify",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "b1nd toastify",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -31,6 +31,6 @@
   ],
   "peerDependencies": {
     "react": ">=18.0.0",
-    "react-toastify": "9.0.8"
+    "react-toastify": ">=9.0.8"
   }
 }
