--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: Release
 
 on:
   push:
@@ -9,7 +9,7 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
   release:
-    name: Publish
+    name: Release
     runs-on: ubuntu-latest
     steps:
       - name: ✅ Checkout Repo
@@ -19,14 +19,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "16.x"
-
-      - name: Use cached node_modules
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: nodeModules-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            nodeModules-
 
       - name: Install Dependencies
         run: yarn install --immutable
@@ -39,7 +31,7 @@ jobs:
       #   env:
       #     NPM_REGISTRY_TOKEN: ${{ secrets.NPM_REGISTRY_TOKEN }}
 
-      - name: Create Release or Publish to npm
+      - name: Create Release Pull Request or Publish to npm
         uses: changesets/action@v1
         with:
           publish: yarn release
