--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -23,13 +23,13 @@ jobs:
       - name: Install Dependencies
         run: yarn install --immutable
 
-      # - name: Creating .npmrc
-      #   run: |
-      #     cat << EOF > "./.npmrc"
-      #      //registry.npmjs.org/:_authToken=$NPM_REGISTRY_TOKEN
-      #     EOF
-      #   env:
-      #     NPM_REGISTRY_TOKEN: ${{ secrets.NPM_REGISTRY_TOKEN }}
+      - name: Creating .npmrc
+        run: |
+          cat << EOF > "./.npmrc"
+           //registry.npmjs.org/:_authToken=$NPM_REGISTRY_TOKEN
+          EOF
+        env:
+          NPM_REGISTRY_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Create Release Pull Request or Publish to npm
         uses: changesets/action@v1
