--- a/packages/b1nd-dodam-common-ui/package.json
+++ b/packages/b1nd-dodam-common-ui/package.json
@@ -43,5 +43,8 @@
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "styled-components": "^5.3.6"
+  },
+  "dependencies": {
+    "react-icons": "^4.8.0"
   }
 }
